a few tests added global cmake makefile added moon9/test, fixed weird bug when var was named 'a' or 'b'

--- a/src/moon9/string/CMakeLists.txt
+++ b/src/moon9/string/CMakeLists.txt
@@ -14,7 +14,7 @@ file(GLOB MOON9_STRING_SAMPLES *.sample.cpp)
 file(GLOB MOON9_STRING_TESTS *.test.cpp)
 list(REMOVE_ITEM MOON9_STRING_SRCS "" ${MOON9_STRING_SAMPLES} ${MOON9_STRING_TESTS})
 ## list(APPEND MOON9_STRING_SRCS platform/w32/others.cpp)
-add_library(moon9-time-static STATIC ${MOON9_STRING_SRCS})
+add_library(moon9-string-static STATIC ${MOON9_STRING_SRCS})
 
 add_executable(arc4.sample                  arc4/arc4.sample.cpp)
 add_executable(dictionary.sample            dictionary.sample.cpp)
@@ -26,12 +26,12 @@ add_executable(roman.sample                 roman/roman.sample.cpp)
 add_executable(string.sample                string/string.sample.cpp)
 add_executable(trie.sample                  trie/trie.sample.cpp)
 
-target_link_libraries(arc4.sample           moon9-time-static)
-target_link_libraries(dictionary.sample     moon9-time-static)
-target_link_libraries(format.sample         moon9-time-static)
-target_link_libraries(hash.sample           moon9-time-static)
-target_link_libraries(id.sample             moon9-time-static)
-target_link_libraries(markov.sample         moon9-time-static)
-target_link_libraries(roman.sample          moon9-time-static)
-target_link_libraries(string.sample         moon9-time-static)
-target_link_libraries(trie.sample           moon9-time-static)
+target_link_libraries(arc4.sample           moon9-string-static)
+target_link_libraries(dictionary.sample     moon9-string-static)
+target_link_libraries(format.sample         moon9-string-static)
+target_link_libraries(hash.sample           moon9-string-static)
+target_link_libraries(id.sample             moon9-string-static)
+target_link_libraries(markov.sample         moon9-string-static)
+target_link_libraries(roman.sample          moon9-string-static)
+target_link_libraries(string.sample         moon9-string-static)
+target_link_libraries(trie.sample           moon9-string-static)
