--- a/src/moon9/io/CMakeLists.txt
+++ b/src/moon9/io/CMakeLists.txt
@@ -29,37 +29,37 @@ list(REMOVE_ITEM MOON9_IO_SRCS "" ${MOON9_IO_SAMPLES} ${MOON9_IO_TESTS})
 ## list(APPEND MOON9_IO_SRCS platform/w32/others.cpp)
 add_library(moon9-io-static STATIC ${MOON9_IO_SRCS})
 
-add_executable(compress.sample.cpp                  compress/compress.sample.cpp)
-add_executable(file.sample.cpp                      file/file.sample.cpp)
-add_executable(files.sample.cpp                     file/files.sample.cpp)
-add_executable(format.sample.cpp                    file/format/format.sample.cpp)
-add_executable(string.sample.cpp                    file/string/string.sample.cpp)
-add_executable(http.sample.cpp                      http/http.sample.cpp)
-add_executable(netstring.sample.cpp                 netstring/netstring.sample.cpp)
-add_executable(pack.sample.cpp                      pack.sample.cpp)
-add_executable(pak.sample.cpp                       pak/pak.sample.cpp)
-add_executable(stream.first.sample.cpp              stream/stream.first.sample.cpp)
-add_executable(stream.second.sample.cpp             stream/stream.second.sample.cpp)
-add_executable(tcp.client.sample.cpp                tcp/tcp.client.sample.cpp)
-add_executable(tcp.server.sample.cpp                tcp/tcp.server.sample.cpp)
-add_executable(udp.client.sample.cpp                udp/udp.client.sample.cpp)
-add_executable(udp.server.sample.cpp                udp/udp.server.sample.cpp)
-add_executable(xml.sample.cpp                       xml.sample.cpp)
+add_executable(compress.sample                   compress/compress.sample.cpp)
+add_executable(file.sample                       file/file.sample.cpp)
+add_executable(files.sample                      file/files.sample.cpp)
+add_executable(ioformat.sample                   file/format/format.sample.cpp)
+add_executable(iostring.sample                   file/string/string.sample.cpp)
+add_executable(http.sample                       http/http.sample.cpp)
+add_executable(netstring.sample                  netstring/netstring.sample.cpp)
+add_executable(pack.sample                       pack.sample.cpp)
+add_executable(pak.sample                        pak/pak.sample.cpp)
+add_executable(stream.first.sample               stream/stream.first.sample.cpp)
+add_executable(stream.second.sample              stream/stream.second.sample.cpp)
+add_executable(tcp.client.sample                 tcp/tcp.client.sample.cpp)
+add_executable(tcp.server.sample                 tcp/tcp.server.sample.cpp)
+add_executable(udp.client.sample                 udp/udp.client.sample.cpp)
+add_executable(udp.server.sample                 udp/udp.server.sample.cpp)
+add_executable(xml.sample                        xml.sample.cpp)
 
-target_link_libraries(compress.sample.cpp           moon9-io-static lz4-static)
-target_link_libraries(file.sample.cpp               moon9-io-static)
-target_link_libraries(files.sample.cpp              moon9-io-static)
-target_link_libraries(format.sample.cpp             moon9-io-static)
-target_link_libraries(string.sample.cpp             moon9-io-static)
-target_link_libraries(http.sample.cpp               moon9-io-static)
-target_link_libraries(netstring.sample.cpp          moon9-io-static)
-target_link_libraries(pack.sample.cpp               moon9-io-static lz4-static pugixml-static miniz-static)
-target_link_libraries(pak.sample.cpp                moon9-io-static miniz-static)
-target_link_libraries(stream.first.sample.cpp       moon9-io-static)
-target_link_libraries(stream.second.sample.cpp      moon9-io-static)
-target_link_libraries(tcp.client.sample.cpp         moon9-io-static)
-target_link_libraries(tcp.server.sample.cpp         moon9-io-static)
-target_link_libraries(udp.client.sample.cpp         moon9-io-static enet-static)
-target_link_libraries(udp.server.sample.cpp         moon9-io-static enet-static)
-target_link_libraries(xml.sample.cpp                moon9-io-static pugixml-static)
+target_link_libraries(compress.sample            moon9-io-static lz4-static)
+target_link_libraries(file.sample                moon9-io-static)
+target_link_libraries(files.sample               moon9-io-static)
+target_link_libraries(ioformat.sample            moon9-io-static)
+target_link_libraries(iostring.sample            moon9-io-static)
+target_link_libraries(http.sample                moon9-io-static)
+target_link_libraries(netstring.sample           moon9-io-static)
+target_link_libraries(pack.sample                moon9-io-static lz4-static pugixml-static miniz-static)
+target_link_libraries(pak.sample                 moon9-io-static miniz-static)
+target_link_libraries(stream.first.sample        moon9-io-static)
+target_link_libraries(stream.second.sample       moon9-io-static)
+target_link_libraries(tcp.client.sample          moon9-io-static)
+target_link_libraries(tcp.server.sample          moon9-io-static)
+target_link_libraries(udp.client.sample          moon9-io-static enet-static)
+target_link_libraries(udp.server.sample          moon9-io-static enet-static)
+target_link_libraries(xml.sample                 moon9-io-static pugixml-static)
 
