--- a/src/moon9/play/CMakeLists.txt
+++ b/src/moon9/play/CMakeLists.txt
@@ -24,22 +24,22 @@ list(REMOVE_ITEM MOON9_PLAY_SRCS "" ${MOON9_PLAY_SAMPLES} ${MOON9_PLAY_TESTS})
 ## list(APPEND MOON9_PLAY_SRCS platform/w32/others.cpp)
 add_library(moon9-play-static STATIC ${MOON9_PLAY_SRCS})
 
-add_executable(callback.sample.cpp          callback/callback.sample.cpp)
-add_executable(event.sample.cpp             event/event.sample.cpp)
-add_executable(factory.sample.cpp           factory/factory.sample.cpp)
-add_executable(fsm.sample.cpp               fsm/fsm.sample.cpp)
-add_executable(obj.first.sample.cpp         obj/obj.first.sample.cpp)
-add_executable(obj.second.sample.cpp        obj/obj.second.sample.cpp)
-add_executable(obj.third.sample.cpp         obj/obj.third.sample.cpp)
-add_executable(obj.fourth.sample.cpp        obj/obj.fourth.sample.cpp ../io/netstring.cpp)
-add_executable(tree.sample.cpp              tree/tree.sample.cpp)
+add_executable(callback.sample              callback/callback.sample.cpp)
+add_executable(event.sample                 event/event.sample.cpp)
+add_executable(factory.sample               factory/factory.sample.cpp)
+add_executable(fsm.sample                   fsm/fsm.sample.cpp)
+add_executable(obj.first.sample             obj/obj.first.sample.cpp)
+add_executable(obj.second.sample            obj/obj.second.sample.cpp)
+add_executable(obj.third.sample             obj/obj.third.sample.cpp)
+add_executable(obj.fourth.sample            obj/obj.fourth.sample.cpp ../io/netstring.cpp)
+add_executable(tree.sample                  tree/tree.sample.cpp)
 
-target_link_libraries(callback.sample.cpp   moon9-play-static)
-target_link_libraries(event.sample.cpp      moon9-play-static)
-target_link_libraries(factory.sample.cpp    moon9-play-static)
-target_link_libraries(fsm.sample.cpp        moon9-play-static)
-target_link_libraries(obj.first.sample.cpp  moon9-play-static)
-target_link_libraries(obj.second.sample.cpp moon9-play-static)
-target_link_libraries(obj.third.sample.cpp  moon9-play-static)
-target_link_libraries(obj.fourth.sample.cpp moon9-play-static msgpack-static)
-target_link_libraries(tree.sample.cpp       moon9-play-static)
+target_link_libraries(callback.sample       moon9-play-static)
+target_link_libraries(event.sample          moon9-play-static)
+target_link_libraries(factory.sample        moon9-play-static)
+target_link_libraries(fsm.sample            moon9-play-static)
+target_link_libraries(obj.first.sample      moon9-play-static)
+target_link_libraries(obj.second.sample     moon9-play-static)
+target_link_libraries(obj.third.sample      moon9-play-static)
+target_link_libraries(obj.fourth.sample     moon9-play-static msgpack-static)
+target_link_libraries(tree.sample           moon9-play-static)
