io/file, has_changed() missed a return play/obj, a much safer destruction chain when mirroring diffs debug/callstack, avoid recursive deadlock when using memtracer CMAKEfile updated ; cleaner tree structure READMEs updated missing bits

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@
 *.lai
 *.la
 *.a
+/build/release-trash
+/build/debug-bin
+/build/debug-lib
+/build/debug-trash
+/build/release-bin
+/build/release-lib
