--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,44 +3,72 @@ cmake_minimum_required(VERSION 2.8)
 
 project(ROOT C CXX)
 
-#set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
+# cotire
+# set (CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
+# include(cotire)
 
 option(BUILD_FRAMEWORKS "Enable this to build *all* frameworks" ON)
 option(BUILD_DEMOS      "Enable this to build *all* demos"      ON)
 option(BUILD_TESTS      "Enable this to build *all* tests"      ON)
 
 if(MSVC)
-  add_definitions(/EHsc)
-  add_definitions(/D_CRT_SECURE_NO_WARNINGS)
-  add_definitions(/wd4244) # dear MSVC, im fully aware and confident about my type conversions. stop hammering me. kthx :s
+    add_definitions(/EHsc)
+    add_definitions(/D_CRT_SECURE_NO_WARNINGS)
+    add_definitions(/wd4244) # dear MSVC, im fully aware and confident about my type conversions. stop hammering me. kthx :s
+
+    if (CMAKE_BUILD_TYPE MATCHES "[Dd][Ee][Bb][Uu][Gg]")
+        add_definitions("/DDEBUG /Zi /Oy-")
+    else()
+        add_definitions("/DNDEBUG /D_NDEBUG /Zi /Oy- /Ox")
+    endif()
 endif(MSVC)
 
 ## include <moon9/*>
 include_directories("src")
 
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-
-if(BUILD_FRAMEWORKS)
-##  add_subdirectory("src/moon9/core"       ./temp/core)
-    add_subdirectory("src/moon9/debug"      ./temp/debug)
-    add_subdirectory("src/moon9/hid"        ./temp/hid)
-    add_subdirectory("src/moon9/io"         ./temp/io)
-    add_subdirectory("src/moon9/math"       ./temp/math)
-    add_subdirectory("src/moon9/memtracer"  ./temp/memtracer)
-    add_subdirectory("src/moon9/os"         ./temp/os)
-    add_subdirectory("src/moon9/play"       ./temp/play)
-    add_subdirectory("src/moon9/render"     ./temp/render)
-    add_subdirectory("src/moon9/spatial"    ./temp/spatial)
-    add_subdirectory("src/moon9/string"     ./temp/string)
-    add_subdirectory("src/moon9/test"       ./temp/test)
-    add_subdirectory("src/moon9/time"       ./temp/time)
+if (CMAKE_BUILD_TYPE MATCHES "[Dd][Ee][Bb][Uu][Gg]")
+    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/debug-lib)
+    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/debug-lib)
+    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/debug-bin)
+    if(BUILD_FRAMEWORKS)
+    ##  add_subdirectory("src/moon9/core"       ./debug-trash/core)
+        add_subdirectory("src/moon9/debug"      ./debug-trash/debug)
+        add_subdirectory("src/moon9/hid"        ./debug-trash/hid)
+        add_subdirectory("src/moon9/io"         ./debug-trash/io)
+        add_subdirectory("src/moon9/math"       ./debug-trash/math)
+        add_subdirectory("src/moon9/memtracer"  ./debug-trash/memtracer)
+        add_subdirectory("src/moon9/os"         ./debug-trash/os)
+        add_subdirectory("src/moon9/play"       ./debug-trash/play)
+        add_subdirectory("src/moon9/render"     ./debug-trash/render)
+        add_subdirectory("src/moon9/spatial"    ./debug-trash/spatial)
+        add_subdirectory("src/moon9/string"     ./debug-trash/string)
+        add_subdirectory("src/moon9/test"       ./debug-trash/test)
+        add_subdirectory("src/moon9/time"       ./debug-trash/time)
+    endif()
+else()
+    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/release-lib)
+    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/release-lib)
+    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/release-bin)
+    if(BUILD_FRAMEWORKS)
+    ##  add_subdirectory("src/moon9/core"       ./release-trash/core)
+        add_subdirectory("src/moon9/debug"      ./release-trash/debug)
+        add_subdirectory("src/moon9/hid"        ./release-trash/hid)
+        add_subdirectory("src/moon9/io"         ./release-trash/io)
+        add_subdirectory("src/moon9/math"       ./release-trash/math)
+        add_subdirectory("src/moon9/memtracer"  ./release-trash/memtracer)
+        add_subdirectory("src/moon9/os"         ./release-trash/os)
+        add_subdirectory("src/moon9/play"       ./release-trash/play)
+        add_subdirectory("src/moon9/render"     ./release-trash/render)
+        add_subdirectory("src/moon9/spatial"    ./release-trash/spatial)
+        add_subdirectory("src/moon9/string"     ./release-trash/string)
+        add_subdirectory("src/moon9/test"       ./release-trash/test)
+        add_subdirectory("src/moon9/time"       ./release-trash/time)
+    endif()
 endif()
 
 if(BUILD_TESTS)
     include_directories("deps/play/msgpack/src")
     file(GLOB msgpack-static "deps/play/msgpack/src/*.cpp")
-	file(GLOB_RECURSE ALL_TESTS "src/moon9/*.test.cpp")
-	add_executable(ALL.TESTS "src/moon9/test/test.cpp" ${msgpack-static} ${ALL_TESTS})
+    file(GLOB_RECURSE ALL_TESTS "src/moon9/*.test.cpp")
+    add_executable(ALL.TESTS "src/moon9/test/test.cpp" ${msgpack-static} ${ALL_TESTS})
 endif()
