--- a/src/moon9/os/CMakeLists.txt
+++ b/src/moon9/os/CMakeLists.txt
@@ -7,7 +7,7 @@ if(MSVC)
   add_definitions(/wd4244) # dear MSVC, im fully aware and confident about my type conversions. stop hammering me. kthx :s
 endif(MSVC)
 
-file(GLOB MOON9_OS_SRCS *.cpp *.hpp)
+file(GLOB MOON9_OS_SRCS *.cpp *.hpp *.inl)
 file(GLOB MOON9_OS_SAMPLES *.sample.cpp)
 file(GLOB MOON9_OS_TESTS *.test.cpp)
 list(REMOVE_ITEM MOON9_OS_SRCS "" ${MOON9_OS_SAMPLES} ${MOON9_OS_TESTS})
