--- a/src/moon9/string/CMakeLists.txt
+++ b/src/moon9/string/CMakeLists.txt
@@ -21,7 +21,7 @@ add_executable(dictionary.sample            dictionary.sample.cpp)
 add_executable(format.sample                format/format.sample.cpp)
 add_executable(hash.sample                  hash/hash.sample.cpp)
 add_executable(id.sample                    id/id.sample.cpp)
-add_executable(markov.sample                markov.sample.cpp)
+add_executable(markov.sample                markov/markov.sample.cpp)
 add_executable(roman.sample                 roman/roman.sample.cpp)
 add_executable(string.sample                string/string.sample.cpp)
 add_executable(trie.sample                  trie/trie.sample.cpp)
