--- a/src/moon9/render/CMakeLists.txt
+++ b/src/moon9/render/CMakeLists.txt
@@ -13,14 +13,19 @@ include_directories("../../../deps/render/glfw/lib")
 include_directories("../../../deps/render/glfw/lib/win32")
 include_directories("../../../deps/render/freeglut/include")
 include_directories("../../../deps/render/spark/include")
+include_directories("../../../deps/render/gwen/gwen/include")
+include_directories("../../../deps/render/stb")
 include_directories("../../../deps/render/")
 
 include_directories("../../../deps/spatial/glm")
 
 include_directories("../../../src")
 
-file(GLOB STB_SRCS "../../../deps/render/stb/*.c")
+file(GLOB STB_SRCS "../../../deps/render/stb/stb*.c")
 add_library(stb-static STATIC ${STB_SRCS})
+
+file(GLOB FONTSTASH_SRCS "../../../deps/render/stb/fontstash.*")
+add_library(fontstash-static STATIC ${FONTSTASH_SRCS})
 
 file(GLOB FREEGLUT_SRCS "../../../deps/render/freeglut/*.c")
 add_library(freeglut-static STATIC ${FREEGLUT_SRCS})
@@ -34,6 +39,9 @@ add_library(glfw-static STATIC ${GLFW_SRCS})
 file(GLOB SPARK_SRCS "../../../deps/render/spark/src/SPK_All.cpp" "../../../deps/render/spark/src/SPK_GL_All.cpp")
 add_library(spark-static STATIC ${SPARK_SRCS})
 
+file(GLOB GWEN_SRCS "../../../deps/render/gwen/gwen/src/*.cpp" "../../../deps/render/gwen/gwen/src/Platforms/*.cpp" "../../../deps/render/gwen/gwen/src/Controls/*.cpp" "../../../deps/render/gwen/gwen/src/Controls/Dialog/*.cpp" "../../../deps/render/gwen/gwen/src/Platforms/W*.cpp" "../../../deps/render/gwen/gwen/UnitTest/*.cpp" "../../../deps/render/gwen/gwen/Renderers/OpenGL/*.c*" "../../../deps/render/gwen/gwen/Renderers/OpenGL/DebugFont/*.cpp" "../../../deps/render/gwen/gwen/Renderers/OpenGL/TruetypeFont/*.c*")
+add_library(gwen-static STATIC ${GWEN_SRCS})
+
 file(GLOB MOON9_RENDER_SRCS *.cpp *.hpp *.inl)
 file(GLOB MOON9_RENDER_SAMPLES *.sample.cpp)
 file(GLOB MOON9_RENDER_TESTS *.test.cpp)
@@ -45,8 +53,10 @@ add_library(moon9-render-static STATIC ${MOON9_RENDER_SRCS})
 add_executable(float16.sample                   float16/float16.sample.cpp)
 add_executable(image.sample                     texture/image/image.sample.cpp)
 add_executable(window.sample                    window.sample.cpp ../time/wink.cpp ../spatial/utils.cpp)
+# add_executable(md5b.sample                      md5b/*.cpp ../time/wink.cpp ../spatial/utils.cpp)
 
 ##target_link_libraries(frustum.sample          moon9-render-static)
 target_link_libraries(float16.sample            moon9-render-static)
 target_link_libraries(image.sample              moon9-render-static stb-static)
 target_link_libraries(window.sample             moon9-render-static freeglut-static glew-static glfw-static)
+# target_link_libraries(md5b.sample               moon9-render-static freeglut-static glew-static glfw-static)
