debug/die, simplified api render/render, removed geometry::font render/font, new library render/shader, single float uniform added render/window, glut/glew/glfw multi instancing supported template/, global sample provided deps/render/gwen, new moon9 renderer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ project(ROOT C CXX)
 
 option(BUILD_FRAMEWORKS "Enable this to build *all* frameworks" ON)
 option(BUILD_DEMOS      "Enable this to build *all* demos"      ON)
-option(BUILD_TESTS      "Enable this to build *all* tests"      OFF)
+option(BUILD_TESTS      "Enable this to build *all* tests"      ON)
 
 if(MSVC)
     add_definitions(/EHsc)
@@ -31,7 +31,7 @@ if (CMAKE_BUILD_TYPE MATCHES "[Dd][Ee][Bb][Uu][Gg]")
     set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/debug-lib)
     set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/debug-bin)
     if(BUILD_FRAMEWORKS)
-    ##  add_subdirectory("src/moon9/core"       ./debug-trash/core)
+    ##  add_subdirectory("src/moon9/hub"        ./debug-trash/hub)
         add_subdirectory("src/moon9/debug"      ./debug-trash/debug)
         add_subdirectory("src/moon9/hid"        ./debug-trash/hid)
         add_subdirectory("src/moon9/io"         ./debug-trash/io)
@@ -50,7 +50,7 @@ else()
     set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/release-lib)
     set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/release-bin)
     if(BUILD_FRAMEWORKS)
-    ##  add_subdirectory("src/moon9/core"       ./release-trash/core)
+    ##  add_subdirectory("src/moon9/hub"        ./release-trash/hub)
         add_subdirectory("src/moon9/debug"      ./release-trash/debug)
         add_subdirectory("src/moon9/hid"        ./release-trash/hid)
         add_subdirectory("src/moon9/io"         ./release-trash/io)
@@ -66,7 +66,7 @@ else()
     endif()
 endif()
 
-if(BUILD_TESTS)
+if(OFF) ##BUILD_TESTS)
     include_directories("deps/play/msgpack/src")
     file(GLOB msgpack-static "deps/play/msgpack/src/*.cpp")
     file(GLOB_RECURSE ALL_TESTS "src/moon9/*.test.cpp")
