moon9/string/dollar, simple string interpolation and string casting macros moon9/string/dictionary, deprecated ; use dollar instead moon9/string/hexdump, warning fixed

--- a/src/moon9/string/CMakeLists.txt
+++ b/src/moon9/string/CMakeLists.txt
@@ -17,17 +17,17 @@ list(REMOVE_ITEM MOON9_STRING_SRCS "" ${MOON9_STRING_SAMPLES} ${MOON9_STRING_TES
 add_library(moon9-string-static STATIC ${MOON9_STRING_SRCS})
 
 add_executable(arc4.sample                  arc4/arc4.sample.cpp)
-add_executable(dictionary.sample            dictionary.sample.cpp)
+add_executable(dollar.sample                dollar/dollar.sample.cpp)
 add_executable(format.sample                format/format.sample.cpp)
 add_executable(hash.sample                  hash/hash.sample.cpp)
 add_executable(id.sample                    id/id.sample.cpp)
 add_executable(markov.sample                markov/markov.sample.cpp)
 add_executable(roman.sample                 roman/roman.sample.cpp)
-add_executable(string.sample                string/string.sample.cpp)
+add_executable(string.sample                dollar/string/string.sample.cpp)
 add_executable(trie.sample                  trie/trie.sample.cpp)
 
 target_link_libraries(arc4.sample           moon9-string-static)
-target_link_libraries(dictionary.sample     moon9-string-static)
+target_link_libraries(dollar.sample         moon9-string-static)
 target_link_libraries(format.sample         moon9-string-static)
 target_link_libraries(hash.sample           moon9-string-static)
 target_link_libraries(id.sample             moon9-string-static)
