--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ OPTION(BUILD_FRAMEWORKS "Enable this to build *all* frameworks" ON)
 OPTION(BUILD_DEMOS      "Enable this to build *all* demos"      ON)
 OPTION(BUILD_TESTS      "Enable this to build *all* tests"      OFF)
 
-
+set( CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH} )
 
 if(MSVC)
     add_definitions(/EHsc /MP)
@@ -37,6 +37,8 @@ if (CMAKE_BUILD_TYPE MATCHES "[Dd][Ee][Bb][Uu][Gg]")
     set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/debug-lib)
     set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/debug-bin)
     if(BUILD_FRAMEWORKS)
+        add_subdirectory("deps/audio"           ./debug-trash/deps-audio)
+        add_subdirectory("src/moon9/audio"      ./debug-trash/audio)
     ##  add_subdirectory("src/moon9/hub"        ./debug-trash/hub)
         add_subdirectory("src/moon9/debug"      ./debug-trash/debug)
         add_subdirectory("src/moon9/hid"        ./debug-trash/hid)
@@ -56,6 +58,8 @@ else()
     set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/release-lib)
     set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/release-bin)
     if(BUILD_FRAMEWORKS)
+        add_subdirectory("deps/audio"           ./release-trash/deps-audio)
+        add_subdirectory("src/moon9/audio"      ./release-trash/audio)
     ##  add_subdirectory("src/moon9/hub"        ./release-trash/hub)
         add_subdirectory("src/moon9/debug"      ./release-trash/debug)
         add_subdirectory("src/moon9/hid"        ./release-trash/hid)
