--- a/deps/audio/openal/CMakeLists.txt
+++ b/deps/audio/openal/CMakeLists.txt
@@ -8,7 +8,7 @@ IF(COMMAND CMAKE_POLICY)
   CMAKE_POLICY(SET CMP0003 NEW)
 ENDIF(COMMAND CMAKE_POLICY)
 
-set( CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH}) # @rlyeh
+set( CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH}) # @rlyeh
 
 INCLUDE(CheckFunctionExists)
 INCLUDE(CheckLibraryExists)
