debug/assert, safer implementation at is_asserting() function play/nmap, nmap container class added ; samples added ; tests added play/multinmap, multinmap container class added ; samples added ; tests added play/pod, byte support ; types renamed spatial/stats, front()/back() swapped ; const correct ; update(dt) support spatial/vec, missing bits added cmakelists, tests enabled back by default

--- a/src/moon9/play/CMakeLists.txt
+++ b/src/moon9/play/CMakeLists.txt
@@ -29,10 +29,12 @@ add_executable(component.sample             component/component.sample.cpp)
 add_executable(event.sample                 event/event.sample.cpp)
 add_executable(factory.sample               factory/factory.sample.cpp)
 add_executable(fsm.sample                   fsm/fsm.sample.cpp)
+add_executable(multinmap.sample             multinmap/multinmap.sample.cpp)
+add_executable(nmap.sample                  nmap/nmap.sample.cpp)
 add_executable(obj.first.sample             obj/obj.first.sample.cpp)
+add_executable(obj.fourth.sample            obj/obj.fourth.sample.cpp ../io/netstring.cpp)
 add_executable(obj.second.sample            obj/obj.second.sample.cpp)
 add_executable(obj.third.sample             obj/obj.third.sample.cpp)
-add_executable(obj.fourth.sample            obj/obj.fourth.sample.cpp ../io/netstring.cpp)
 add_executable(tree.sample                  tree/tree.sample.cpp)
 
 target_link_libraries(callback.sample       moon9-play-static)
@@ -40,8 +42,10 @@ target_link_libraries(component.sample      moon9-play-static)
 target_link_libraries(event.sample          moon9-play-static)
 target_link_libraries(factory.sample        moon9-play-static)
 target_link_libraries(fsm.sample            moon9-play-static)
+target_link_libraries(multinmap.sample      moon9-play-static)
+target_link_libraries(nmap.sample           moon9-play-static)
 target_link_libraries(obj.first.sample      moon9-play-static)
+target_link_libraries(obj.fourth.sample     moon9-play-static msgpack-static)
 target_link_libraries(obj.second.sample     moon9-play-static)
 target_link_libraries(obj.third.sample      moon9-play-static)
-target_link_libraries(obj.fourth.sample     moon9-play-static msgpack-static)
 target_link_libraries(tree.sample           moon9-play-static)
